html and css fixes to sponsor stuff as well as ie7 fix

--- a/vdc/default.html
+++ b/vdc/default.html
@@ -4,12 +4,34 @@
   <head>
     {% css_default %}
   </head>
+
+      <!--[if IE 7]>
+
+      <style>
+
+      #background {
+
+      width:1460px;
+      left: 250px;
+
+      }
+
+      </style>
+
+      <![endif]-->
+
 <body>
+
+<div id="background">
+<a href="http://www.revolution-nutrition.com/our-products/bcaa-splash/" id="skin"></a></div>
+
 <div id="wrap">
 
+<a href="http://www.revolution-nutrition.com/our-products/carnitine-cooler/">
 <div id="header">
   <h2>UFE Shows</h2>
 </div>
+</a>
 
 
 <div id="navigation">
